syntax = "proto2";

import "google/protobuf/any.proto";
import "model.proto";

option go_package = "github.com/syzoj/syzoj-ng-go/app/model";
// API part
message Response {
	optional ResponseSession session = 1;
	optional string error = 2;
	optional google.protobuf.Any data = 3;
}

message ResponseSession {
	optional string user_name = 1;
	optional bool logged_in = 2;
}

message LoginRequest {
	optional string username = 1;
	optional string password = 2;
}

message RegisterRequest {
	optional string username = 1;
	optional string password = 2;
	optional string email = 3;
}

message ProblemDbResponse {
	repeated Problem problems = 1;
}

message ProblemDbNewRequest {
	optional Problem problem = 1;
}
message ProblemDbNewResponse {
	optional Problem problem = 1;
	optional bool can_submit = 2;
	optional bool is_owner = 3;
}

message ProblemDbEditRequest {
	optional Problem problem = 1;
}

message ProblemDbViewSubmitRequest {
	optional SubmissionContent content = 1;
}

message ProblemDbViewSubmitResponse {
	optional Submission submission = 1;
}

message SubmissionsResponse {
	repeated SubmissionsResponseSubmissionEntry submissions = 1;
}

message SubmissionsResponseSubmissionEntry {
	optional Submission submission = 1;
	optional Problem problem = 2;
	optional User submit_user = 3;
}

message SubmissionViewResponse {
	optional Submission submission = 1;
	optional Problem problem = 2;
}

message ContestsResponse {
	repeated ContestsResponseContestEntry contests = 1;
}

message ContestsResponseContestEntry {
	optional Contest contest = 1;
	optional bool running = 2;
}

message ContestIndexResponse {
	optional Contest contest = 1;
	repeated ContestProblemEntryResponse problems = 2;
	optional bool running = 3;
}

message ContestProblemEntryResponse {
	optional string name = 1;
	optional Problem problem = 2;
}

message ContestRanklistResponse {
	optional ContestRanklist ranklist = 1;
}

message ContestProblemViewResponse {
    optional Problem problem = 1;
}
// Debug API
message DebugContestSubmitRequest {
	optional ObjectID contest_id = 1;
	optional ObjectID user_id = 2;
	optional ObjectID submission_id = 3;
	optional string name = 4;
}

message ContestProblemSubmitRequest {
	optional SubmissionContent content = 1;
}

message ContestProblemSubmitResponse {
    optional Submission submission = 1;
}
